--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,9 +17,10 @@
     <color name="deep_purple_100">#d1c4e9</color>
     <color name="deep_purple_100_light">#fff7ff</color>
     <color name="deep_purple_100_dark">#a094b7</color>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="blue">#4772C6</color>
+    <color name="dark_blue">#07257E</color>
+    <color name="green">#2D8C13</color>
+    <color name="dark_green">#1D6810</color>
+    <color name="pink">#F1675D</color>
+    <color name="red">#A30707</color>
 </resources>
