--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,67 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.Quiz.First" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+    <style name="Theme.Quiz" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorOnPrimary">@color/black</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+    </style>
+
+    <style name="Theme.Quiz.First" parent="Theme.Quiz">
+        <item name="colorPrimary">@color/deep_orange_100</item>
+        <item name="colorPrimaryDark">@color/deep_orange_100_dark</item>
+        <item name="colorPrimaryVariant">@color/deep_orange_100_dark</item>
+        <item name="colorSecondary">@color/deep_orange_100</item>
+        <item name="colorSecondaryVariant">@color/deep_orange_100_light</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">@color/deep_orange_100_dark</item>
+    </style>
+
+    <style name="Theme.Quiz.Second" parent="Theme.Quiz">
+        <item name="colorPrimary">@color/yellow_100</item>
+        <item name="colorPrimaryDark">@color/yellow_100_dark</item>
+        <item name="colorPrimaryVariant">@color/yellow_100_dark</item>
+        <item name="colorSecondary">@color/yellow_100</item>
+        <item name="colorSecondaryVariant">@color/yellow_100_light</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/yellow_100_dark</item>
+    </style>
+
+    <style name="Theme.Quiz.Third" parent="Theme.Quiz">
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryDark">@color/yellow_100_dark</item>
+        <item name="colorPrimaryVariant">@color/yellow_100_dark</item>
+        <item name="colorSecondary">@color/dark_blue</item>
+        <item name="colorSecondaryVariant">@color/yellow_100_light</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/yellow_100_dark</item>
+    </style>
+
+    <style name="Theme.Quiz.Fourth" parent="Theme.Quiz">
+        <item name="colorPrimary">@color/green</item>
+        <item name="colorPrimaryDark">@color/yellow_100_dark</item>
+        <item name="colorPrimaryVariant">@color/yellow_100_dark</item>
+        <item name="colorSecondary">@color/dark_green</item>
+        <item name="colorSecondaryVariant">@color/yellow_100_light</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/yellow_100_dark</item>
+    </style>
+
+    <style name="Theme.Quiz.Fifth" parent="Theme.Quiz">
+        <item name="colorPrimary">@color/pink</item>
+        <item name="colorPrimaryDark">@color/yellow_100_dark</item>
+        <item name="colorPrimaryVariant">@color/yellow_100_dark</item>
+        <item name="colorSecondary">@color/red</item>
+        <item name="colorSecondaryVariant">@color/yellow_100_light</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/yellow_100_dark</item>
+    </style>
+
+    <style name="Theme.Quiz.Sixth" parent="Theme.Quiz">
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryDark">@color/yellow_100_dark</item>
+        <item name="colorPrimaryVariant">@color/yellow_100_dark</item>
+        <item name="colorSecondary">@color/yellow_100</item>
+        <item name="colorSecondaryVariant">@color/yellow_100_light</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/yellow_100_dark</item>
     </style>
 </resources>
